--- a/src/xsens_driver/package.xml
+++ b/src/xsens_driver/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>test_pkg</name>
+  <name>xsens_driver</name>
   <version>0.0.0</version>
-  <description>The test_pkg package</description>
+  <description>The xsens_driver package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="pi@todo.todo">pi</maintainer>
+  <maintainer email="delphin2@todo.todo">delphin2</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/test_pkg</url> -->
+  <!-- <url type="website">http://wiki.ros.org/xsens_driver</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -50,6 +50,9 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
+    <!-- You can specify that this package is a metapackage here: -->
+    <!-- <metapackage/> -->
+
     <!-- Other tools can request additional information be placed here -->
 
   </export>
